--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador</title>
-    <script src="js/main.js"></script>
 </head>
 <body> 
+
+    <center><h1>LALA NAILS</h1>
+
+    <div id="reserva"> </div>
+
+    </center>
+
+
+    <script src="js/main.js"></script>
 </body>
 </html>
