--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <title>Simulador</title>
 </head>
 <body> 
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html"> Inicio</a></li>
+                <li> <a href="./secciones/reservar.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <center><h1>LALA NAILS</h1>
 
-    <div id="reserva"> </div>
+    <div id="reserva"> </div> 
 
     </center>
 
