2da entrega final

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html"> Inicio</a></li>
                 <li> <a href="./secciones/reservar.html">Contacto</a></li>
+                <li> <a href="./secciones/turnos.html">Turnos</a></li>
             </ul>
         </nav>
     </header>
@@ -23,6 +24,6 @@
     </center>
 
 
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
