--- a/secciones/reservar.html
+++ b/secciones/reservar.html
@@ -4,21 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../estilos/style.css">
     <title>Contacto</title>
 </head>
 <body>
     <header>
         <nav>
+            <div>
+                <a href="index.html"><img src="../imagenes/logo.png" class="logo" alt="Lala Nails"> </a>
+            </div>
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li> <a href="reservar.html">Contacto</a></li>
-                <li> <a href="turnos.html">Turnos</a></li>
+                <li><a class="line" href="../index.html">Inicio</a></li>
+                <li> <a class="line" href="">Diseños</a></li>
+                <li> <a class="line" href="turnos.html">Turnos</a></li>
+                <li> <a class="line" href="reservar.html">Contacto</a></li>
+                <li> <a class="line" href="">Nosotros</a></li>
                 
             </ul>
         </nav>
     </header>
-    
-    <center><h1>Contacto</h1></center>
+    <main class="main">
+    <center><h1 class="tituloC">CONTACTO</h1></center>
 
     <form id="form" action="turnos.html">
         <center>
@@ -50,11 +56,25 @@
 
 
         <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Escriba su mensaje"></textarea><br><br>
-        <button id = "btnReservar" type="submit">Reservar</button>
-        <button id = "btnCancelar" type="reset">Cancelar</button>
+        <button id = "btnReservar" type="submit" onclick="mostrarAlerta()">Reservar</button>
+        <button id = "btnCancelar" type="reset" >Cancelar</button>
         </center>
     </form>
+    </main>
+
+    <footer>
+        <div class="linea2"></div>
+        <div class="redes">
+            <a href="https://www.instagram.com" alt="Instagram" class="red"></a>
+            <a href="https://www.facebook.com" alt="Facebook" class="red"></a>
+            <a href="https://twitter.com" alt="Twitter" class="red"></a> </li>
+            <a href="https://twitter.com" alt="Gmail" class="red"></a> </li>
+        </div>
+        <span class="copyright">&copy;2022, Lala Nails. Todos los derechos reservados.</span>
+    </footer>
+
 
     <script src="../js/contacto.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.16/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
