--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./estilos/style.css">
     <title>Simulador</title>
 </head>
 <body> 
     <header>
         <nav>
+            <div>
+                <a href="index.html"><img src="./imagenes/logo.png" class="logo" alt="Lala Nails"> </a>
+              </div>
             <ul>
-                <li><a href="index.html"> Inicio</a></li>
-                <li> <a href="./secciones/reservar.html">Contacto</a></li>
-                <li> <a href="./secciones/turnos.html">Turnos</a></li>
+                <li><a class="line" href="index.html"> Inicio</a></li>
+                <li> <a class="line"href="">Diseños</a></li>
+                <li> <a class="line" href="./secciones/turnos.html">Turnos</a></li>
+                <li> <a class="line" href="./secciones/reservar.html">Contacto</a></li>
+                <li> <a class="line" href="">Nosotros</a></li>
             </ul>
         </nav>
     </header>
+    <main class="main">
 
-    <center><h1>LALA NAILS</h1>
+    <center><h1 class="titulo">LALA  NAILS</h1>
 
     <div id="reserva"> </div> 
 
@@ -25,5 +32,17 @@
 
 
     <!-- <script src="js/main.js"></script> -->
+    </main>
+    <footer>
+        <div class="linea2"></div>
+        <div class="redes">
+            <a href="https://www.instagram.com" alt="Instagram" class="red"></a>
+            <a href="https://www.facebook.com" alt="Facebook" class="red"></a>
+            <a href="https://twitter.com" alt="Twitter" class="red"></a> </li>
+            <a href="https://twitter.com" alt="Gmail" class="red"></a> </li>
+        </div>
+        <span class="copyright">&copy;2022, Real Estate. Todos los derechos reservados.</span>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.16/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
