--- a/secciones/reservar.html
+++ b/secciones/reservar.html
@@ -60,6 +60,8 @@
         <button id = "btnCancelar" type="reset" >Cancelar</button>
         </center>
     </form>
+    <button id = "btnJSON" class="boton">Datos</button>
+    <div id="resultado"></div>
     </main>
 
     <footer>
