--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos/style.css">
-    <title>Simulador</title>
+    <title>Lala Nails</title>
 </head>
 <body> 
     <header>
@@ -16,7 +16,7 @@
             <ul>
                 <li><a class="line" href="index.html"> Inicio</a></li>
                 <li> <a class="line"href="">Diseños</a></li>
-                <li> <a class="line" href="./secciones/turnos.html">Turnos</a></li>
+                <li> <a class="line" href="">Promociones</a></li>
                 <li> <a class="line" href="./secciones/reservar.html">Contacto</a></li>
                 <li> <a class="line" href="">Nosotros</a></li>
             </ul>
@@ -25,8 +25,7 @@
     <main class="main">
 
     <center><h1 class="titulo">LALA  NAILS</h1>
-
-    <div id="reserva"> </div> 
+        <h2 class="titulo">El Simulador se encuentra en la seccion Contacto</h2>
 
     </center>
 
@@ -41,7 +40,7 @@
             <a href="https://twitter.com" alt="Twitter" class="red"></a> </li>
             <a href="https://twitter.com" alt="Gmail" class="red"></a> </li>
         </div>
-        <span class="copyright">&copy;2022, Real Estate. Todos los derechos reservados.</span>
+        <span class="copyright">&copy;2022, Lala Nails. Todos los derechos reservados.</span>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.16/dist/sweetalert2.all.min.js"></script>
 </body>
