--- a/secciones/reservar.html
+++ b/secciones/reservar.html
@@ -31,23 +31,22 @@
             </ul>
         </nav>
     </header>
-        <!--Título de la página Contacto-->
         <div class="tituloPrincipal">
             <h6>Contacto</h6>
         </div>
-        <div class="d-flex justify-content-evenly modifContenido"> <!--Div para modificar el contenido de la página-->
+        <div class="d-flex justify-content-evenly modifContenido">
             <div>
                 <div>
                     <h6>Reserve una visita</h6>
                 </div>
-                <div id="calendario" class="d-flex modifCalendario"> <!--Calendario para seleccionar un turno-->
+                <div id="calendario" class="d-flex modifCalendario">
                     <input id="diaHora" class="flatpickr flatpickr-input" type="text" placeholder="Seleccione una fecha y un horario..." readonly="readonly">
                     <button id="btnCalend" class="button btn-danger" type="submit">Confirmar</button>
                 </div>
             </div>
             <div>
                 <div>
-                    <h6>Dejenos su consulta</h6> <!--Comienzo del formulario para realizar una consulta médica-->
+                    <h6>Dejenos su consulta</h6>
                 </div>
                 <form  id="formulario">
                     <div class="field">
@@ -85,7 +84,7 @@
                 </form>           
             </div>
         </div>
-        <div class="d-flex justify-content-center modifMapa"> <!--Ubicación del establecimiento-->
+        <div class="d-flex justify-content-center modifMapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.8262996068547!2d-58.580826984171225!3d-34.75996817329049!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc50cc17ecfef%3A0xdb9a23e33d4ba2fb!2sCnel.%20Estomba%203449%2C%20B1757MJC%20Gregorio%20de%20Laferrere%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1655248716050!5m2!1ses-419!2sar" width="1000" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <footer>
