--- a/secciones/turnos.html
+++ b/secciones/turnos.html
@@ -28,13 +28,12 @@
             </ul>
         </nav>
     </header>
-    <!--Título de la página Reserva-->
   <div class="tituloPrincipal">
     <h6>Reserve una visita</h6>
   </div>
   <div class="d-flex justify-content-evenly divPrincipalReserva">
     <div>
-      <form id="formulario" class="formReserva"> <!--Comienzo del formulario para reservar un turno-->
+      <form id="formulario" class="formReserva"> 
         <div class="field">
           <label class="label">Nombre y Apellido</label>
           <div class="control">
@@ -92,7 +91,7 @@
       </form>
     </div>
     <div id="detalleReserv">
-      <h6 class="tith6">Detalles de la reserva</h6> <!--Detalles de la reserva (Profesional, forma de pago, etc)-->
+      <h6 class="tith6">Detalles de la reserva</h6>
     </div>
   </div>
   <footer>
